--- a/src/back-end/package.json
+++ b/src/back-end/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "fastify start src/server.mjs --watch --port 8080 --address 0.0.0.0"
+    "dev": "fastify start server.mjs --watch --port 8080 --address 0.0.0.0"
   },
   "author": "",
   "license": "ISC",
