--- a/src/back-end/package.json
+++ b/src/back-end/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fastify/static": "^6.6.0",
     "fastify": "^4.5.3",
     "fastify-cli": "^5.4.1",
     "jsdom": "^20.0.0"
