--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 
     "scripts":{
-        "build": "cd src/front-end/ && npm install && vite-ssg build",
+        "build": "./build.sh",
         "start": "cd src/back-end/ && node server.mjs"
     }
 }
