--- a/package.json
+++ b/package.json
@@ -2,6 +2,6 @@
 
     "scripts":{
         "build": "./build.sh",
-        "start": "npm --prefix=src/back-end start --loglevel=verbose"
+        "start": "cd src/back-end/ && npm run start"
     }
 }
