--- a/src/back-end/package.json
+++ b/src/back-end/package.json
@@ -13,8 +13,10 @@
   "dependencies": {
     "@fastify/static": "^6.6.0",
     "close-with-grace": "^1.1.0",
-    "fastify": "^4.5.3",
+    "fastify": "^4.11.0",
     "fastify-cli": "^5.4.1",
+    "@fastify/express": "2.3.0",
+    "http-proxy-middleware": "^2.0.6",
     "jsdom": "^20.0.0"
   }
 }
